# 4SimpleSearch

./: .gitignore  CMakeLists.txt  main.cpp  main.h
.github/: copilot-instructions.md
resources/: us_female.names  us_male.names  us_surname.names
